enterprise/operator/pkg/lb/testdata/lbservice_translation/53-ipfamily-dualstack-t2/output-t2-ciliumenvoyconfig.yaml
apiVersion: cilium.io/v2
kind: CiliumEnvoyConfig
metadata:
  annotations:
    cec.cilium.io/inject-cilium-filters: "false"
    cec.cilium.io/is-l7lb: "false"
    cec.cilium.io/use-original-source-address: "false"
  namespace: default
  name: lbfe-lb-1
spec:
  nodeSelector:
    matchExpressions:
      - key: service.cilium.io/node
        operator: In
        values:
          - t1-t2
          - t2
  resources:
    - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
      additionalAddresses:
        - address:
            socketAddress:
              address: 2004::0
              portValue: 80
      address:
        socketAddress:
          address: 100.64.0.100
          portValue: 80
      filterChains:
        - filterChainMatch:
            directSourcePrefixRanges:
              - addressPrefix: 172.18.0.0
                prefixLen: 32
              - addressPrefix: 172.18.0.1
                prefixLen: 32
              - addressPrefix: fc00:c111::2
                prefixLen: 128
              - addressPrefix: fc00:c111::3
                prefixLen: 128
            transportProtocol: raw_buffer
          filters:
            - name: envoy.filters.network.http_connection_manager
              typedConfig:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                commonHttpProtocolOptions:
                  headersWithUnderscoresAction: REJECT_REQUEST
                  maxConnectionDuration: 3600s
                generateRequestId: true
                http2ProtocolOptions:
                  initialConnectionWindowSize: 1048576
                  initialStreamWindowSize: 65535
                  maxConcurrentStreams: 100
                httpFilters:
                  - name: envoy.filters.http.health_check
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
                      clusterMinHealthyPercentages:
                        backend_cluster_lb-1:
                          value: 20
                        backend_cluster_lb-2:
                          value: 20
                        backend_cluster_lb-3:
                          value: 20
                      headers:
                        - name: :path
                          stringMatch:
                            exact: /health
                        - name: :method
                          stringMatch:
                            exact: GET
                        - name: user-agent
                          stringMatch:
                            prefix: cilium-probe/
                      passThroughMode: false
                  - name: envoy.filters.http.router
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                      suppressEnvoyHeaders: true
                mergeSlashes: true
                normalizePath: true
                routeConfig: {}
                serverName: ilb
                statPrefix: healthcheck_http_default_lb-1
                stripMatchingHostPort: true
                useRemoteAddress: false
        - filterChainMatch:
            transportProtocol: raw_buffer
          filters:
            - name: envoy.filters.network.http_connection_manager
              typedConfig:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                accessLog:
                  - name: stdout
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      logFormat:
                        textFormatSource:
                          inlineString: "\n"
                generateRequestId: false
                commonHttpProtocolOptions:
                  headersWithUnderscoresAction: REJECT_REQUEST
                  maxConnectionDuration: 3600s
                http2ProtocolOptions:
                  initialConnectionWindowSize: 1048576
                  initialStreamWindowSize: 65535
                  maxConcurrentStreams: 100
                httpFilters:
                  - name: envoy.filters.http.router
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                      suppressEnvoyHeaders: true
                normalizePath: true
                mergeSlashes: true
                stripMatchingHostPort: true
                useRemoteAddress: false
                rds:
                  routeConfigName: frontend_routeconfig_http
                serverName: ilb
                statPrefix: http_default_lb-1
      listenerFilters:
        - name: envoy.filters.listener.tls_inspector
          typedConfig:
            "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
        - name: cilium.bpf_metadata
          typedConfig:
            "@type": type.googleapis.com/cilium.BpfMetadata
      perConnectionBufferLimitBytes: 32768
      statPrefix: default_lb-1
      trafficDirection: INBOUND
      name: frontend_listener_tcp
    - "@type": type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      name: frontend_routeconfig_http
      virtualHosts:
        - domains:
            - "*"
          name: frontend_virtualhost_http_wildcard
          responseHeadersToRemove:
            - x-envoy-upstream-service-time
            - x-envoy-overloaded
          requestHeadersToRemove:
            - x-envoy-internal
            - x-envoy-external-address
          routes:
            - match:
                prefix: /
              route:
                cluster: backend_cluster_lb-1
        - domains:
            - "*.foo.acme.io"
          name: frontend_virtualhost_http_wildcard_foo_acme_io
          requestHeadersToRemove:
            - x-envoy-internal
            - x-envoy-external-address
          responseHeadersToRemove:
            - x-envoy-upstream-service-time
            - x-envoy-overloaded
          routes:
            - match:
                path: /foo
              route:
                cluster: backend_cluster_lb-1
        - domains:
            - "bar.acme.io"
          name: frontend_virtualhost_http_bar_acme_io
          responseHeadersToRemove:
            - x-envoy-upstream-service-time
            - x-envoy-overloaded
          requestHeadersToRemove:
            - x-envoy-internal
            - x-envoy-external-address
          routes:
            - match:
                path: /api
              route:
                cluster: backend_cluster_lb-2
            - match:
                path: /bar
              route:
                cluster: backend_cluster_lb-3
        - domains:
            - "foo.acme.io"
          name: frontend_virtualhost_http_foo_acme_io
          responseHeadersToRemove:
            - x-envoy-upstream-service-time
            - x-envoy-overloaded
          requestHeadersToRemove:
            - x-envoy-internal
            - x-envoy-external-address
          routes:
            - match:
                path: /foo
              route:
                cluster: backend_cluster_lb-3
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      commonLbConfig:
        healthyPanicThreshold: {}
      connectTimeout: 5s
      healthChecks:
        - healthyThreshold: 1
          httpHealthCheck:
            expectedStatuses:
              - end: "201"
                start: "200"
            host: lb
            method: GET
            path: /healthz
          interval: 30s
          noTrafficInterval: 30s
          timeout: 5s
          transportSocketMatchCriteria:
            type: healthcheck
          unhealthyEdgeInterval: 30s
          unhealthyInterval: 30s
          unhealthyThreshold: 1
      ignoreHealthOnHostRemoval: true
      name: backend_cluster_lb-1
      type: EDS
      typedExtensionProtocolOptions:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          commonHttpProtocolOptions:
            maxConnectionDuration: 3600s
          explicitHttpConfig:
            httpProtocolOptions: {}
      perConnectionBufferLimitBytes: 32768
      roundRobinLbConfig: {}
      trackClusterStats:
        perEndpointStats: true
        requestResponseSizes: true
        timeoutBudgets: true
      transportSocket:
        name: envoy.transport_sockets.raw_buffer
        typedConfig:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
      transportSocketMatches:
        - match:
            type: healthcheck
          name: healthcheck
          transportSocket:
            name: envoy.transport_sockets.raw_buffer
            typedConfig:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      commonLbConfig:
        healthyPanicThreshold: {}
      connectTimeout: 5s
      healthChecks:
        - healthyThreshold: 1
          httpHealthCheck:
            expectedStatuses:
              - end: "201"
                start: "200"
            host: lb
            method: GET
            path: /healthz
          interval: 20s
          noTrafficInterval: 20s
          timeout: 5s
          transportSocketMatchCriteria:
            type: healthcheck
          unhealthyEdgeInterval: 20s
          unhealthyInterval: 20s
          unhealthyThreshold: 1
      name: backend_cluster_lb-2
      type: EDS
      typedExtensionProtocolOptions:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          commonHttpProtocolOptions:
            maxConnectionDuration: 3600s
          explicitHttpConfig:
            httpProtocolOptions: {}
      perConnectionBufferLimitBytes: 32768
      roundRobinLbConfig: {}
      trackClusterStats:
        perEndpointStats: true
        requestResponseSizes: true
        timeoutBudgets: true
      transportSocket:
        name: envoy.transport_sockets.raw_buffer
        typedConfig:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
      transportSocketMatches:
        - match:
            type: healthcheck
          name: healthcheck
          transportSocket:
            name: envoy.transport_sockets.raw_buffer
            typedConfig:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
      ignoreHealthOnHostRemoval: true
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      commonLbConfig:
        healthyPanicThreshold: {}
      connectTimeout: 5s
      healthChecks:
        - healthyThreshold: 1
          httpHealthCheck:
            expectedStatuses:
              - end: "201"
                start: "200"
            host: lb
            method: GET
            path: /healthz
          interval: 20s
          noTrafficInterval: 20s
          timeout: 5s
          transportSocketMatchCriteria:
            type: healthcheck
          unhealthyEdgeInterval: 20s
          unhealthyInterval: 20s
          unhealthyThreshold: 1
      name: backend_cluster_lb-3
      type: EDS
      typedExtensionProtocolOptions:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          commonHttpProtocolOptions:
            maxConnectionDuration: 3600s
          explicitHttpConfig:
            httpProtocolOptions: {}
      perConnectionBufferLimitBytes: 32768
      roundRobinLbConfig: {}
      trackClusterStats:
        perEndpointStats: true
        requestResponseSizes: true
        timeoutBudgets: true
      transportSocket:
        name: envoy.transport_sockets.raw_buffer
        typedConfig:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
      transportSocketMatches:
        - match:
            type: healthcheck
          name: healthcheck
          transportSocket:
            name: envoy.transport_sockets.raw_buffer
            typedConfig:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
      ignoreHealthOnHostRemoval: true
    - "@type": type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
      clusterName: backend_cluster_lb-1
      endpoints:
        - lbEndpoints:
            - endpoint:
                address:
                  socketAddress:
                    address: 172.18.0.5
                    portValue: 8080
              loadBalancingWeight: 1
            - endpoint:
                address:
                  socketAddress:
                    address: 172.18.0.6
                    portValue: 8080
              loadBalancingWeight: 1
            - endpoint:
                address:
                  socketAddress:
                    address: 2001:0DB8:130F::9C0:876A:130B
                    portValue: 8080
              loadBalancingWeight: 1
    - "@type": type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
      clusterName: backend_cluster_lb-2
      endpoints:
        - lbEndpoints:
            - endpoint:
                address:
                  socketAddress:
                    address: 172.18.0.7
                    portValue: 8080
              loadBalancingWeight: 1
            - endpoint:
                address:
                  socketAddress:
                    address: 172.18.0.8
                    portValue: 8080
              loadBalancingWeight: 1
    - "@type": type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
      clusterName: backend_cluster_lb-3
      endpoints:
        - lbEndpoints:
            - endpoint:
                address:
                  socketAddress:
                    address: 172.18.0.9
                    portValue: 8080
              loadBalancingWeight: 1
            - endpoint:
                address:
                  socketAddress:
                    address: 172.18.0.10
                    portValue: 8080
              loadBalancingWeight: 1
